--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -506,7 +506,7 @@
                                     <segue destination="qIm-wM-wJV" kind="modal" id="2j8-h3-vr3"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w1j-CN-sZ2">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w1j-CN-sZ2">
                                 <rect key="frame" x="49" y="82" width="82" height="133"/>
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Button" image="scrumCard.png">
@@ -1479,9 +1479,9 @@ Cg
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="zd2-bA-y6D"/>
-        <segue reference="2TN-sa-4hd"/>
+        <segue reference="Vqs-rg-jIN"/>
         <segue reference="Vzr-Zg-bMq"/>
+        <segue reference="2TN-sa-4hd"/>
         <segue reference="2EV-Ra-CA9"/>
     </inferredMetricsTieBreakers>
 </document>
