Fixes many warnings

--- a/Spellthrowers/Base.lproj/Main_iPad.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPad.storyboard
@@ -924,9 +924,9 @@ Cg
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="xtH-0g-WeU"/>
-        <segue reference="Cb9-uf-PYS"/>
+        <segue reference="335-cR-x5V"/>
         <segue reference="nlE-49-7RB"/>
+        <segue reference="Cb9-uf-PYS"/>
         <segue reference="qxs-qb-Ymr"/>
     </inferredMetricsTieBreakers>
 </document>
